# ten-second-tools

./: .dockerignore  .flake8  .gitignore  README.md  docker-compose.yml  pullrequest.txt  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/autopr/: pullrequest.txt
.github/workflows/: ci.yml
Psyncronous/: README.md  __init__.py  async_process_executor.py
Psyncronous - Asyncronous Python/: async_job.py  async_pool_executor.py  async_threaded_executor.py
READMD/: readmd.py
Rando/: rando.py
Rando - Revolutionary Randomizers/: rando.py
RoboMir/: README.md  RoboMirror.ps1
RoboMir/config/: example_config.json
RoboMir/config/schema/: config.schema.json
src/: get_crypto_prices.py  main.py  main2.py  t.py
src/Psyncronous/: async_job.py
src/READMD/: README.md  __main__.py  config.py  config_provider.py  old.py  readme.py  repos.csv
src/READMD/config/: repos.json
src/READMD/output/: README_West-End-Financial.md
src/RoboMir/: RoboMirror.ps1
src/RoboMir/config/: example_config.json
src/cryptax/: account.py  fills.py  readme.md
src/cryptax/coinbase_pro/: __init__.py  coinbase_pro_transaction_factory.py
src/cryptax/core/: __init__.py  cost_basis_strategy_factory.py  report_generator.py
src/geckoin/: get_crypto_prices.py  readme.md
src/nsync/: nsync.sh  readme.md
src/poptarts/: poptarts.sh  readme.md
src/psyncronous/: README.md  __init__.py  async_job.py  async_pool_executor.py  async_process_executor.py  async_threaded_executor.py
src/rando/: __init__.py  rando.py
src/tax/: tax.py
(+27 files in other folders)
